@@ -1,6 +1,7 @@
 2008-11-28  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Fixed bug #9760: Multiple pages with comment form - one storage folder
+	* Fixed bug #9635: ###UID### is not replaced in tx_comments template
 
 2008-11-19	Dmitry Dulepov	<dmitry@typo3.org>
 
